Corrigir conteúdo vazando nos painéis de projetos

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -183,6 +183,10 @@
 		flex:1 0 45%; max-width: ~"calc(50% - 1rem)"; padding:2rem; border:1px solid @c100; border-top:4px solid @c100; position:relative;
 		&:before{content: ""; position: absolute; left: -1px; top: -4px; width: 3rem; height: 4px; background: @amarelo;}
 	}
+	.board--flex {
+	  max-width: none;
+	  min-width: min-content;
+	}
 	.board_indicador{
 		border: 1px solid @c100; border-top: 8px solid @laranja;
 	}
