--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -391,6 +391,65 @@ p {
   margin-left: 2rem !important;
 }
 
+.pt1 {
+  padding-top: 1rem !important;
+}
+
+.pt2 {
+  padding-top: 2rem !important;
+}
+
+.pt3 {
+  padding-top: 3rem !important;
+}
+
+.pt4 {
+  padding-top: 4rem !important;
+}
+
+.pt5 {
+  padding-top: 5rem !important;
+}
+
+.pr1 {
+  padding-right: 1rem !important;
+}
+
+.pr2 {
+  padding-right: 2rem !important;
+}
+
+.pr3 {
+  padding-right: 3rem !important;
+}
+
+.pr4 {
+  padding-right: 4rem !important;
+}
+
+.pr5 {
+  padding-right: 5rem !important;
+}
+
+.pb1 {
+  padding-bottom: 1rem !important;
+}
+
+.pb2 {
+  padding-bottom: 2rem !important;
+}
+
+.pb3 {
+  padding-bottom: 3rem !important;
+}
+
+.pb4 {
+  padding-bottom: 4rem !important;
+}
+
+.pb5 {
+  padding-bottom: 5rem !important;
+}
 .pl1 {
   padding-left: 1rem !important;
 }
