Criar mais estilos auxiliares para tabelas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1528,14 +1528,6 @@ p {
     }
   }
 
-  .col--botão-de-ação {
-    width: 24px;
-  }
-
-  .col--dataHora {
-    width: 12em;
-  }
-
   a:hover {
     color: @amarelo;
   }
@@ -1892,4 +1884,24 @@ div[aria-busy="true"] {
   50% {
     opacity: 0;
   }
+}
+
+.col--botão-de-ação {
+  width: 24px;
+}
+
+.col--data {
+  width: 5em;
+}
+
+.col--dataHora {
+  width: 12em;
+}
+
+.cell--data {
+  text-align: left;
+}
+
+.cell--number {
+  text-align: right;
 }
