Corrigir estilos faltantes do cronograma de tarefas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1905,3 +1905,102 @@ div[aria-busy="true"] {
 .cell--number {
   text-align: right;
 }
+
+.tabela-de-etapas {
+  border-style: hidden;
+  width: 100%;
+
+  tbody {
+    th {
+      text-align: left;
+    }
+
+    tr {
+      border-bottom: 1px solid @c100;
+    }
+  }
+
+  th,
+  td {
+    padding-top: 0.375rem;
+    padding-right: 0.375rem;
+    padding-bottom: 0.375rem;
+    padding-left: 0.375rem;
+  }
+}
+
+.tabela-de-etapas__item {
+  position: relative;
+
+  +.tabela-de-etapas__item {
+    tr:first-child {
+
+      th,
+      td {
+        .pt1;
+      }
+    }
+  }
+}
+
+
+.tabela-de-etapas__item--primeiro-nivel {}
+
+.tabela-de-etapas__item--sub {}
+
+.tabela-de-etapas__titulo-da-tarefa {}
+
+.tabela-de-etapas__titulo-da-tarefa--fora-do-EAP {
+  font-weight: inherit;
+}
+
+.genealogia {
+  .pl3;
+
+  col& {
+    width: 1.5em;
+  }
+}
+
+.genealogia .valor {
+  background: @c100 center no-repeat;
+  display: inline-block;
+  font-variant-numeric: slashed-zero tabular-nums;
+  height: 1.75rem;
+  line-height: 1.75rem;
+  position: initial;
+  border-radius: 999em;
+  padding: 0 0.875em;
+}
+
+.genealogia--fora-do-EAP .valor {
+  background: transparent;
+}
+
+.genealogia--origem {
+  &:before {
+    content: "";
+    position: absolute;
+    left: -2px;
+    top: 1.5rem;
+    bottom: -0.375rem;
+    width: 4px;
+    .bgc300;
+  }
+}
+
+.genealogia--origem .valor {
+  .bgc300;
+  .br(200px);
+  .t20;
+  .w700;
+  color: white;
+  height: 3rem;
+  left: -4.5rem;
+  line-height: 3rem;
+  position: relative;
+  text-align: center;
+  top: 0;
+  width: 3rem;
+  padding: 0;
+}
