--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -450,6 +450,11 @@ p {
 .pb5 {
   padding-bottom: 5rem !important;
 }
+
+.pl0 {
+  padding-left: 0 !important;
+}
+
 .pl1 {
   padding-left: 1rem !important;
 }
@@ -520,6 +525,10 @@ p {
 
   .f2 {
     flex: 2;
+  }
+  
+  .f100 {
+    flex-basis: 100%;
   }
 }
 
