--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -526,7 +526,7 @@ p {
   .f2 {
     flex: 2;
   }
-  
+
   .f100 {
     flex-basis: 100%;
   }
@@ -1987,14 +1987,33 @@ div[aria-busy="true"] {
 }
 
 .genealogia--origem {
-  &:before {
+  &::before,
+  &::after {
     content: "";
     position: absolute;
+    .bgc300;
+  }
+    
+  &::before {
     left: -2px;
     top: 1.5rem;
     bottom: -0.375rem;
     width: 4px;
-    .bgc300;
+  }
+  
+  &::after {
+    top: auto;
+    bottom: calc(-0.375rem - 4px);
+    height: 4px;
+    width: 16px;
+    left: -8px;
+  }
+  
+  :only-child > & {  
+    &::before,
+    &::after {
+      content: none;
+    }
   }
 }
 
