--- a/frontend/src/_less/style.less
+++ b/frontend/src/_less/style.less
@@ -3,4 +3,5 @@
 @import "variables.less";
 @import "normalize.less";
 @import "transitions.less";
-@import "_base.less"; 
+@import "_tooltip.less";
+@import "_base.less";
