Atualizar classes funcionais

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -168,6 +168,10 @@ strong {
   font-size: 11px;
 }
 
+.t10 {
+  font-size: 10px;
+}
+
 .w400 {
   font-weight: 400;
 }
@@ -429,6 +433,10 @@ p {
 
 .pr5 {
   padding-right: 5rem !important;
+}
+
+.pb05 {
+  padding-bottom: 0.5rem !important;
 }
 
 .pb1 {
