Adicionar estilos de etiquetas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2043,3 +2043,38 @@ div[aria-busy="true"] {
   width: 3rem;
   padding: 0;
 }
+
+.etiqueta {
+  font-weight: 700;
+  background-color: @c400;
+  text-align: center;
+  padding-right: 1em;
+  padding-left: 1em;
+  border-radius: 999em;
+  white-space: nowrap;
+  line-height: 1.5em;
+
+  &:only-child {
+    display: block;
+  }
+}
+
+.etiqueta--alerta__peso-1 {
+  background-color: @alerta__peso-1;
+}
+
+.etiqueta--alerta__peso-2 {
+  background-color: @alerta__peso-2;
+}
+
+.etiqueta--alerta__peso-3 {
+  background-color: @alerta__peso-3;
+}
+
+.etiqueta--alerta__peso-4 {
+  background-color: @alerta__peso-4;
+}
+
+.etiqueta--alerta__peso-5 {
+  background-color: @alerta__peso-5;
+}
