--- a/frontend/src/_less/variables.less
+++ b/frontend/src/_less/variables.less
@@ -14,6 +14,11 @@
 @laranja: #F2890D;
 @vermelho: #EE3B2B;
 @azul: #4074BF;
+@alerta__peso-1: #92d505;
+@alerta__peso-2: #15a034;
+@alerta__peso-3: #f7e334;
+@alerta__peso-4: #f39140;
+@alerta__peso-5: #e21c40;
 
 .clearfix() {
   &:before,
