Não cortar painéis nos gráficos

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -27,9 +27,9 @@ body {
   display: block;
   margin: 0 0 0 70px;
   padding: 50px;
-  height: 100vh;
-  overflow: auto;
-  overflow-x: hidden;
+  z-index: 10;
+  position: relative;
+  min-height: 100vh;
   container-type: inline-size;
 }
 
