Formatar código dos processos SEI

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1932,6 +1932,12 @@ div[aria-busy="true"] {
   .col--minimum;
 }
 
+.cell--minimum {
+  .col--minimum;
+
+  white-space: nowrap;
+}
+
 .col--dataHora {
   width: 12em;
 }
