--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -86,6 +86,52 @@ strong {
   font-weight: 900;
 }
 
+details {
+  align-self: flex-start;
+
+  &[open] {
+    align-self: auto;
+  }
+}
+
+details summary {
+  cursor: pointer;
+  position: relative;
+
+  &::before {
+    width: 1.5em;
+    height: 1.5em;
+    content: '';
+    position: absolute;
+    display: block;
+    right: 100%;
+    background-repeat: no-repeat;
+    background-position: 50% 75%;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="13" height="8" fill="none"><path fill="%23F7C234" d="M10.294 1.294a1 1 0 1 1 1.414 1.414l-5 5a1 1 0 0 1-1.414 0l-5-5a1 1 0 0 1 1.413-1.415l4.294 4.294 4.293-4.293Z" /></svg>');
+  }
+
+  &:hover,
+  &:focus {
+    &::before {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="13" height="8" fill="none"><path fill="%233B5881" d="M10.294 1.294a1 1 0 1 1 1.414 1.414l-5 5a1 1 0 0 1-1.414 0l-5-5a1 1 0 0 1 1.413-1.415l4.294 4.294 4.293-4.293Z" /></svg>');
+    }
+  }
+}
+
+details[open] summary {
+  &::before {
+    background-position: 50% 100%;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="13" fill="none"><path fill="%233B5881" d="M-.206 1.206A1 1 0 1 1 1.208-.208l5 5a1 1 0 0 1 0 1.414l-5 5A1 1 0 0 1-.207 9.794L4.087 5.5-.206 1.207Z" /></svg>');
+  }
+
+  &:hover,
+  &:focus {
+    &::before {
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="13" fill="none"><path fill="%23F7C234" d="M-.206 1.206A1 1 0 1 1 1.208-.208l5 5a1 1 0 0 1 0 1.414l-5 5A1 1 0 0 1-.207 9.794L4.087 5.5-.206 1.207Z" /></svg>');
+    }
+  }
+}
+
 .uc {
   text-transform: uppercase;
 }
