Reduzir largura ocupada pela hierarquia na tabela de tarefas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2023,6 +2023,10 @@ div[aria-busy="true"] {
     padding-bottom: 0.375rem;
     padding-left: 0.375rem;
   }
+
+  .genealogia {
+    padding-right: 0;
+  }
 }
 
 @container (min-width: 64em) {
@@ -2059,7 +2063,7 @@ div[aria-busy="true"] {
 }
 
 .genealogia {
-  .pl3;
+  .pl2;
 
   col& {
     width: 1.5em;
@@ -2119,7 +2123,7 @@ div[aria-busy="true"] {
   .w700;
   color: white;
   height: 3rem;
-  left: -4.5rem;
+  left: -3.5rem;
   line-height: 3rem;
   position: relative;
   text-align: center;
