Atualizar resumo de projetos

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1998,7 +1998,7 @@ div[aria-busy="true"] {
 }
 
 .cell--number {
-  text-align: right;
+  text-align: right !important;
   white-space: nowrap;
 }
 
