Sinalizar com cores os dados estimados e efetivos no cronograma

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -151,6 +151,14 @@ details[open] summary {
   background-color: fade(@vermelho, 10%);
 }
 
+.dado-estimado {
+  color: @estimativa !important;
+}
+
+.dado-efetivo {
+  color: @efetivo !important;
+}
+
 .error-msg {
   color: @vermelho;
   .t12;
