--- a/frontend/src/_less/variables.less
+++ b/frontend/src/_less/variables.less
@@ -14,6 +14,8 @@
 @laranja: #F2890D;
 @vermelho: #EE3B2B;
 @azul: #4074BF;
+@estimativa: #634A09;
+@efetivo: @c600;
 @alerta__peso-1: #92d505;
 @alerta__peso-2: #15a034;
 @alerta__peso-3: #f7e334;
