Aprimorar exibição de alerta de Plano de ação pendente

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2019,8 +2019,8 @@ caption {
 }
 
 .cell--data {
-  text-align: center;
-  white-space: nowrap;
+  text-align: right !important;
+  white-space: nowrap !important;
 }
 
 .cell--number {
