Permitir que o conteúdo de `#dashboard` tome toda a altura disponível

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -24,7 +24,8 @@ body {
 }
 
 #dashboard {
-  display: block;
+  flex-direction: column;
+  display: flex;
   margin: 0 0 0 70px;
   padding: 50px;
   z-index: 10;
