Adicionar classe auxiliar `.pr0`

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -495,6 +495,10 @@ p {
   padding-top: 5rem !important;
 }
 
+.pr0 {
+  padding-right: 0 !important;
+}
+
 .pr1 {
   padding-right: 1rem !important;
 }
