Permitir múltiplos grupos de links no menu secundário

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1883,7 +1883,7 @@ p {
   .bs(0 0 40px 20px fadeOut(black, 93%));
 
   .subpadding {
-    padding: 50px;
+    padding: 50px 50px 0 50px;
 
     h2 {
       color: @c300;
