Adicionar mais auxiliares de estilo de plano de fundo

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -398,6 +398,18 @@ p {
   background: @c300;
 }
 
+.bgc400 {
+  background: @c400;
+}
+
+.bgc500 {
+  background: @c500;
+}
+
+.bgc600 {
+  background: @c600;
+}
+
 .bgs1 {
   background: fade(@azul, 10%) !important;
 }
