Aprimorar exibição de quebras de linha no auxiliar de depuração

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2228,6 +2228,7 @@ caption {
   outline: 2px solid fuchsia;
   border-radius: 1px;
   outline-offset: 3px;
+  white-space: pre-wrap;
 
   &[data-debug] {
     &::before {
