--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1640,11 +1640,19 @@ p {
     text-align: left;
     padding: .75em 1em;
     text-overflow: ellipsis;
+
+    &:not(:last-child) {
+      overflow: hidden;
+    }
   }
 
   td {
     padding: .75em 1em;
     text-overflow: ellipsis;
+
+    &:not(:last-child) {
+      overflow: hidden;
+    }
 
     label {
       display: block;
