Paginar arquivos enviado para importação de orçamento

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -933,6 +933,12 @@ p {
     width: 100%;
   }
 
+  &.center {
+    margin-right: auto;
+    margin-left: auto;
+    width: max-content;
+  }
+
   &.tcprimary {
     color: @primary;
 
