Corrigir dimensões dos números em cronogramas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1115,8 +1115,8 @@ p {
       position: absolute;
       left: -1.5rem;
       width: 3rem;
+      height: 3rem;
       top: -1.5rem;
-      width: 3rem;
       .br(200px);
       text-align: center;
       line-height: 3rem;
@@ -1124,6 +1124,7 @@ p {
       .w700;
       color: white;
       .bgc600;
+      text-overflow: ellipsis;
     }
 
     &:before {
@@ -1153,7 +1154,7 @@ p {
         left: -1.25rem;
         width: 2.5rem;
         top: -1.8rem;
-        width: 2.5rem;
+        height: 2.5rem;
         .br(200px);
         text-align: center;
         line-height: 2.5rem;
