Corrigir cores não definidas por variáveis

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -13,7 +13,7 @@ body {
   font-size: 14px;
   line-height: 1.15;
   color: @primary;
-  background: #ffffff;
+  background: @branco;
   min-height: 100vh;
 }
 
@@ -82,7 +82,7 @@ a svg {
 
 svg {
   &.blue {
-    fill: #3A3A47;
+    fill: @marrom;
   }
 }
 
@@ -813,7 +813,7 @@ p {
     padding: .4rem .4rem .3rem;
     .w400;
     .t11;
-    background: #FFF4E9;
+    background: @bege-claro;
     margin-bottom: .5em;
     position: relative;
 
@@ -1290,12 +1290,12 @@ p {
     margin: .25rem;
 
     &.op {
-      background: #F7F2FC;
+      background: @cinza-claro;
       cursor: pointer;
     }
 
     &.v {
-      background: #ECF6F0;
+      background: @cinza-claro-esverdeado;
       cursor: pointer;
 
       &[data-var] {
@@ -1681,7 +1681,7 @@ p {
         fill: @c600;
       }
 
-      border-bottom: 1px solid #E3E5E8;
+      border-bottom: 1px solid @c100;
     }
   }
 
@@ -1789,7 +1789,7 @@ p {
 .tipinfo {
   display: inline-block;
   vertical-align: middle;
-  color: #3A3A47;
+  color: @marrom;
   position: relative;
 
   >div {
