--- a/frontend/src/_less/variables.less
+++ b/frontend/src/_less/variables.less
@@ -10,9 +10,13 @@
 @c600: #3B5881;
 @escuro: #061223;
 @branco: #FFF;
+@cinza-claro: #F7F2FC;
+@cinza-claro-esverdeado: #ECF6F0;
+@bege-claro: #FFF4E9;
 @verde: #8EC122;
 @laranja: #F2890D;
 @vermelho: #EE3B2B;
+@marrom: #3A3A47;
 @azul: #4074BF;
 @estimativa: #634A09;
 @efetivo: @c600;
