Corrigir link ausente para criação de variável

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -591,6 +591,10 @@ p {
     justify-content: center;
   }
 
+  &.justifyleft {
+    justify-content: flex-start;
+  }
+
   &.center {
     align-items: center;
   }
