feat: Simplificar estilização de mensagens de erro em formulário

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -265,6 +265,9 @@ details[open] summary {
   color: @efetivo !important;
 }
 
+textarea ~ span[role='alert'],
+select ~ span[role='alert'],
+input ~ span[role='alert'],
 .error-msg {
   color: @vermelho;
   .t12;
