feat: Normalizar estilo de etiquetas de campos de opção

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1866,6 +1866,11 @@ input[type='radio'] {
   .uc;
   line-height: 1;
   margin-bottom: .8em;
+
+  label > input[type='checkbox'] + &,
+  label > input[type='radio'] + & {
+    display: inline;
+  }
 }
 
 .halfInput {
