feat: Aprimorar estilos de cabeçalhos de linha de tabela

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2155,6 +2155,10 @@ input[type='radio'] {
     }
   }
 
+  tbody th {
+    .tprimary;
+  }
+
   td {
     padding: .75em 1em;
     text-overflow: ellipsis;
