feat: Aprimorar exbição de código de depuração

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2857,6 +2857,11 @@ caption {
       content: attr(data-debug)': ';
     }
   }
+
+  > pre,
+  > textarea {
+    white-space: pre-wrap;
+  }
 }
 
 pre {
