Feat: Aprimorar indicador de rolagem horizontal no workflow

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2673,7 +2673,7 @@ div[aria-busy="true"] {
 // https: //adrianroselli.com/2020/11/under-engineered-responsive-tables.html
 [role="region"][aria-labelledby][tabindex],
 [role="region"][aria-label][tabindex] {
-  .rolavel-verticalmente;
+  .rolavel-horizontalmente;
 }
 
 caption {
