fix: Prevenir quebra de linha antes do paineis flutuantes personalizados

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2376,6 +2376,10 @@ progress,
   vertical-align: middle;
   color: @marrom;
 
+  > svg {
+    display: inline-block;
+  }
+
   > div {
     // posicionado em relação ao primeiro ancestral que defina um contexto.
     // No caso, deve ser `#dashboard`.
