feat: Aplicar estado de espera aos botões de envio sob formulários em espera

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1308,6 +1308,7 @@ p {
     opacity: .5;
   }
 
+  [aria-busy="true"] &,
   &[aria-busy="true"] {
     background-repeat: no-repeat;
     background-position: 1em center;
