--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -86,6 +86,12 @@ a svg {
   max-width: none;
 }
 
+input,
+textarea,
+[contenteditable] {
+  caret-color: @azul;
+}
+
 fieldset {
   border: 0;
   padding-top: 3rem;
