feat: Novos campos para calculo de porcentagem em Investimento e Custeio

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1224,6 +1224,14 @@ p {
   border: none !important;
 }
 
+
+.text-center {
+  text-align: center;
+}
+.padding-sm {
+  padding-top: 1.5rem;
+}
+
 .btn {
   .t12;
   line-height: 1;
