fix: Rodapé de tabela sem bordas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2202,6 +2202,11 @@ progress,
     }
   }
 
+  tfoot tr {
+    border-top: 1px solid @c100;
+    border-bottom: 0;
+  }
+
   tz {
     display: table-row;
   }
@@ -2339,7 +2344,7 @@ progress,
       padding-left: 0;
     }
   }
-  
+
   &.tbody-zebra {
     tbody:nth-of-type(odd) tr{
       background: @c50 !important;
