feat: Estilizar campos de apenas leitura marcados com `aria`

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1925,6 +1925,7 @@ input[type='radio'] {
     }
   }
 
+  &[aria-readonly='true'],
   &[aria-disabled='true'],
   &:disabled {
     background: @c50;
