fix: fundo de tabelas comendo a sombra da rolagem horizontal

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2384,8 +2384,8 @@ progress,
   }
 
   &.tbody-zebra {
-    tbody:nth-of-type(odd) tr{
-      background: @c50 !important;
+    tbody:nth-of-type(odd) tr {
+      background-color: fadeout(black, 95%) !important;
     }
     tbody tr {
       background-color: transparent !important;
