fix: Alinhamento errado em cabeçalho de colunas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2786,7 +2786,7 @@ caption {
   text-align: right !important;
 
   thead & {
-    white-space: normal;
+    white-space: normal !important;
   }
 }
 
@@ -2797,7 +2797,7 @@ caption {
   font-variant-numeric: tabular-nums;
 
   thead & {
-    white-space: normal;
+    white-space: normal !important;
   }
 }
 
