--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -3074,8 +3074,8 @@ pre {
     left: 0;
     width: 100%;
     height: 1rem;
-    background-image: repeating-linear-gradient(45deg, transparent, transparent 48px, #f2ff00 48px, #f2ff00 96px);
-    background-color: #000000;
+    background-image: repeating-linear-gradient(45deg, transparent, transparent 48px, #000000 48px, #000000 96px);
+    background-color: #f2ff00;
     z-index: 1000;
   }
 }
