--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -3077,5 +3077,6 @@ pre {
     background-image: repeating-linear-gradient(45deg, transparent, transparent 48px, #000000 48px, #000000 96px);
     background-color: #f2ff00;
     z-index: 1000;
+    .bs();
   }
 }
