--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -3071,9 +3071,10 @@ pre {
     content: '';
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 1rem;
+    right: 0;
+    bottom: 0;
+    width: 1.5rem;
+    height: 100%;
     background-image: repeating-linear-gradient(45deg, transparent, transparent 48px, #000000 48px, #000000 96px);
     background-color: #f2ff00;
     z-index: 1000;
