fix: Painel flutuante desaparecendo de tabelas

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2462,6 +2462,10 @@ progress,
     .bs(0px 8px 16px rgba(21, 39, 65, 0.1));
     white-space: normal;
 
+    table & {
+      position: absolute;
+    }
+
     &:before {
       content: "";
       position: absolute;
