fix: Painéis flutuantes personalizados capturando ponteiro

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2461,6 +2461,7 @@ progress,
     z-index: 99;
     .bs(0px 8px 16px rgba(21, 39, 65, 0.1));
     white-space: normal;
+    pointer-events: none;
 
     table & {
       position: absolute;
