feat: Ocultar sinalizador de foco de tabela com rolagem usando o mouse

--- a/frontend/src/_less/variables.less
+++ b/frontend/src/_less/variables.less
@@ -161,6 +161,15 @@
   background-position: 0 0, 100%, 0 0, 100%;
   background-attachment: local, local, scroll, scroll;
 
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
+
+  &:focus-visible {
+    outline: 1px solid @c400;
+    outline-offset: 2px;
+  }
+
   &:focus {
     outline: 1px solid @c400;
     outline-offset: 2px;
