feat: destacando ultimo campo aberto pelo usuario

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -872,6 +872,14 @@ p {
     gap: 2rem;
   }
 
+  &.g3 {
+    gap: 3rem;
+  }
+
+  &.g4 {
+    gap: 4rem;
+  }
+
   > * {
     max-width: 100%;
   }
@@ -1781,7 +1789,7 @@ input[type='checkbox'] {
     height: 1.428571rem;
     width: 2.857143rem;
     border: 0;
-    color: @c50;
+    color: @c200;
     border-radius: 999em;
     background: currentColor;
     cursor: pointer;
