feat: realizando correções em detalhe de variável

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -3121,3 +3121,13 @@ pre {
     .bs();
   }
 }
+
+.particula {
+  padding: 0 8px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  color: #152741;
+  background-color: #E2EAFE;
+  border-radius: 10px;
+}
