--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -2273,6 +2273,10 @@ progress,
         background-color: fadeout(black, 95%);
       }
     }
+
+    &.selecionado {
+      background-color: #D8E9F1;
+    }
   }
 
   tfoot tr {
