feat: adiciona grid-full-column aos helpers

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -801,6 +801,11 @@ p {
   padding-left: 5rem !important;
 }
 
+/* Grid */
+.grid-full-column {
+  grid-column: -1 / 1;
+}
+
 /* Flex */
 .flex {
   display: flex !important;
