feat: adiciona fonte roboto slab no componente NumeroComLegenda e cria um helper pra ela

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -310,6 +310,11 @@ input ~ span[role='alert'],
 }
 
 /* Tipografia */
+.ff-slab {
+  font-family: "Roboto Slab", serif;
+  font-weight: 600;
+}
+
 .t64 {
   font-size: 64px;
 }
