feat: adiciona tooltip nos gráficos de projeto por etapa/status

--- a/frontend/src/_less/style.less
+++ b/frontend/src/_less/style.less
@@ -4,4 +4,5 @@
 @import "normalize.less";
 @import "transitions.less";
 @import "_tooltip.less";
+@import "_projeto-tooltip.less";
 @import "_base.less";
