fix: adiciona scroll horizontal pros gráficos em telas muito pequenas
Porém agora temos scroll horizontal em sliders, o que pode ser um
problema de ux

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -977,6 +977,12 @@ p {
   }
 }
 
+/* Width */
+.min-width {
+  --min-width: 50rem;
+  min-width: var(--min-width);
+}
+
 .hide-text {
   padding: 0;
   overflow: hidden;
