fix: ajustando cor de fundo do passa folha

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -524,6 +524,10 @@ p {
   background-color: #ffff !important;
 }
 
+.bgt {
+  background-color: transparent !important;
+}
+
 .bgc50 {
   background: @c50;
 }
