fix: Área de acionamento do menu de opções muito pequena

--- a/frontend/src/_less/_base.less
+++ b/frontend/src/_less/_base.less
@@ -1395,6 +1395,15 @@ p {
   position: relative;
   padding: .5rem 0;
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: -1rem;
+    right: -1rem;
+    bottom: -1rem;
+    left: -1rem;
+  }
+
   ul {
     position: absolute;
     top: 100%;
@@ -1433,6 +1442,7 @@ p {
       a {
         .t14;
         .w700;
+        display: block;
         color: @primary;
 
         &:hover {
@@ -1440,7 +1450,7 @@ p {
         }
       }
 
-      +li {
+      + li {
         margin-top: .5em;
       }
     }
